tests/fixtures/qml/reject/unknown_property.qml
import QtQuick 2.15

Rectangle {
    width: 100
    height: 100
    color: "#ffffff"
    notARealProperty: 42
}
